--- a/views/admin/perfil.html
+++ b/views/admin/perfil.html
@@ -136,39 +136,39 @@
         
         <form class="form-horizontal" role="form">
           <div class="form-group">
+            <label class="col-md-3 control-label">Alias Usuario:</label>
+            <div class="col-md-8">
+              <input class="form-control" type="text" id="input_userName" required>
+            </div>
+          </div>
+          <div class="form-group">
             <label class="col-lg-3 control-label">Nombre:</label>
             <div class="col-lg-8">
-              <input class="form-control" id="input_name" type="text" value="Jane">
+              <input class="form-control" id="input_name" type="text">
             </div>
           </div>
           <div class="form-group">
             <label class="col-lg-3 control-label">Apellido:</label>
             <div class="col-lg-8">
-              <input class="form-control" id="input_ape" type="text" value="Bishop">
+              <input class="form-control" id="input_ape" type="text">
             </div>
           </div>
           <div class="form-group">
             <label class="col-lg-3 control-label">Email:</label>
             <div class="col-lg-8">
-              <input class="form-control" id="input_mail" type="text" value="janesemail@gmail.com">
+              <input class="form-control" id="input_mail" type="text">
             </div>
           </div>  
           <div class="form-group">
-            <label class="col-md-3 control-label">Nombre de Usuario:</label>
-            <div class="col-md-8">
-              <input class="form-control" type="text" id="input_userName" value="janeuser" required>
-            </div>
-          </div>
-          <div class="form-group">
             <label class="col-md-3 control-label">Password:</label>
             <div class="col-md-8">
-              <input class="form-control" id="input_pass" type="text" value="11111122333">
+              <input class="form-control" id="input_pass" type="text">
             </div>
           </div>
           <div class="form-group">
             <label class="col-md-3 control-label">Confirmar password:</label>
             <div class="col-md-8">
-              <input class="form-control" id="confirmPass" type="text" value="">
+              <input class="form-control" id="confirmPass" type="text">
             </div>
           </div>
           <div class="form-group">
