The last commit

--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -158,6 +158,10 @@
             <!-- /.box-body -->
         </div>
 
+      <div class="row">
+        <div id="container" style="min-width: 100px; height: 400px; margin: 0 auto">
+        </div>
+
       </div>
     </section>
   </div>
@@ -177,6 +181,10 @@
 <script src="javascripts/lib/app.min.js"></script>
 <script src="../javascripts/admin/user.js"></script>
 <script src="../javascripts/admin/reportes.js"></script>
+
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/data.js"></script>
+<script src="https://code.highcharts.com/modules/drilldown.js"></script>
 
 </body>
 </html>
