--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -94,7 +94,7 @@
             <i class="fa fa-bar-chart"></i> <span>Reportes</span> <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/admin"><i class="fa fa-circle-o"></i> Informes</a></li>
+            <li><a href="/admin"><i class="fa fa-circle" aria-hidden="true"></i> Informes</a></li>
           </ul>
         </li>
         <li class="treeview">
