--- a/views/admin/usuarios.html
+++ b/views/admin/usuarios.html
@@ -122,7 +122,7 @@ input[type="text"], input[type="number"]{
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/admin/usuarios"><i class="fa fa-circle-o"></i> Configurar</a></li>
+            <li><a href="/admin/usuarios"><i class="fa fa-circle" aria-hidden="true"></i> Configurar</a></li>
           </ul>
         </li>
         <li>
