--- a/views/admin/usuarios.html
+++ b/views/admin/usuarios.html
@@ -113,7 +113,8 @@ input[type="text"], input[type="number"]{
             <i class="fa fa-bar-chart"></i> <span>Reportes</span> <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/admin"><i class="fa fa-circle-o"></i> Informes</a></li>
+            <li><a href="/admin"><i class="fa fa-circle-o"></i> Time From Start</a></li>
+            <li><a href="/timeLife"><i class="fa fa-circle-o"></i> Time Life</a></li>
           </ul>
         </li>
         <li class="active treeview">
