--- a/views/admin/perfil.html
+++ b/views/admin/perfil.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="../images/favicon.png" type="image/png" />
 
   <link rel="stylesheet" href="../bower_components/lobilist/lib/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../bower_components/lobibox/dist/css/Lobibox.min.css"/>
   <link rel="stylesheet" href="../stylesheets/lib/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="../stylesheets/lib/AdminLTE.css">
@@ -174,7 +175,7 @@
           <div class="form-group">
             <label class="col-md-3 control-label"></label>
             <div class="col-md-8">
-              <input type="button" class="btn btn-primary" value="Guardar Cambios">
+              <input type="button" class="btn btn-primary" onclick='user.editPerfil()' value="Guardar Cambios">
               <span></span>
               <input type="reset" class="btn btn-default" value="Cancelar">
             </div>
@@ -189,6 +190,7 @@
 <script src="../bower_components/lobilist/lib/jquery/jquery.min.js"></script>
 <!-- Bootstrap 3.3.6 -->
 <script src="../bower_components/lobilist/lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="../bower_components/lobibox/dist/js/Lobibox.min.js"></script>
 <!-- AdminLTE App -->
 <script src="../javascripts/lib/app.min.js"></script>
 <script src="../javascripts/admin/user.js"></script>
