--- a/views/admin/timeLife.html
+++ b/views/admin/timeLife.html
@@ -5,18 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Admin | Kanban</title>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <link rel="shortcut icon" href="../images/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
 
-  <link rel="stylesheet" href="../bower_components/lobilist/lib/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../stylesheets/lib/font-awesome.min.css">
+  <link rel="stylesheet" href="bower_components/lobilist/lib/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="stylesheets/lib/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="../stylesheets/lib/AdminLTE.css">
-  <link rel="stylesheet" href="../stylesheets/lib/skins/_all-skins.min.css">
+  <link rel="stylesheet" href="stylesheets/lib/AdminLTE.css">
+  <link rel="stylesheet" href="stylesheets/lib/skins/_all-skins.min.css">
+  <link rel="stylesheet" href="../stylesheets/lib/datatables/dataTables.bootstrap.css">
 
+<style type="text/css">
+  .row{
+    margin: 5px 5px;
+  }
+</style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
-
   <header class="main-header">
 
     <!-- Logo -->
@@ -39,13 +44,13 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="../images/avatar5.png" class="user-image" alt="User Image">
+              <img src="images/avatar5.png" class="user-image" alt="User Image">
               <span class="hidden-xs nameUser">Usuario</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="../images/avatar5.png" class="img-circle" alt="User Image">
+                <img src="images/avatar5.png" class="img-circle" alt="User Image">
                 <p>
                   <small>Bienvenido a Kanban Tools</small>
                   <div class="pull-right">
@@ -68,15 +73,13 @@
       </div>
     </nav>
   </header>
-
-  <!-- Left side column. contains the logo and sidebar -->
   <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="../images/avatar5.png" class="img-circle" alt="User Image">
+          <img src="images/avatar5.png" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>Usuario</p>
@@ -86,13 +89,13 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu">
         <li class="header">Menu de Navegación</li>
-        <li class="treeview">
+        <li class="active treeview">
           <a href="#">
             <i class="fa fa-bar-chart"></i> <span>Reportes</span> <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
             <li><a href="/admin"><i class="fa fa-circle-o"></i> Time From Start</a></li>
-            <li><a href="/timeLife"><i class="fa fa-circle-o"></i> Time Life</a></li>
+            <li><a href="/timeLife"><i class="fa fa-circle" aria-hidden="true" ></i> Time Life</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -104,7 +107,7 @@
             <li><a href="/admin/usuarios"><i class="fa fa-circle-o"></i> Configurar</a></li>
           </ul>
         </li>
-        <li class="active">
+        <li>
           <a href="/admin/calendario">
             <i class="fa fa-calendar"></i> <span>Calendario</span>
             <!--<small class="label pull-right bg-red">3</small>-->
@@ -117,39 +120,72 @@
     <!-- /.sidebar -->
   </aside>
 
-  <!-- Content Wrapper. Contains page content -->
-    <!-- Content Header (Page header) -->
   <div class="content-wrapper">
     <section class="content-header">
       <h1>
-        Calendario
-        <small>Eventos</small>
+        Reportes
+        <small>Informes y auditoria</small>
       </h1>
       <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-calendar"></i> Admin</a></li>
-        <li class="active">Calendario</li>
+        <li><a href="#"><i class="fa fa-bar-chart"></i> Admin</a></li>
+        <li><a href="#">Reportes</a></li>
+        <li class="active">Informes y auditoria</li>
       </ol>
     </section>
     <section class="content">
       <div class="row">
-        
+
+        <div class="box">
+            <div class="box-header">
+              <h3 class="box-title">Duración final desde el momento que un posit comenzo su ciclo de vida</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+              <table id="tblReport_time_life" class="table table-bordered table-hover table-responsive">
+                <thead>
+                <tr>
+                  <th>#Nro. Tarea</th>
+                  <th>Titulo</th>
+                  <th>Fecha de Inicio</th>
+                  <th>Fecha de Fin</th>
+                  <th>Cant. de días</th>
+                </tr>
+                </thead>
+                <tbody>
+                
+                </tbody>
+              </table>
+            </div>
+            <!-- /.box-body -->
+        </div>
+
+      <div class="row">
+        <div id="container_time_life" style="min-width: 100px; height: 400px; margin: 0 auto">
+        </div>
+
       </div>
     </section>
-  </div>  
-      
-
+  </div>
 </div>
 
 <!-- ./wrapper -->
 
 <!-- jQuery 2.2.0 -->
-<script src="../bower_components/lobilist/lib/jquery/jquery.min.js"></script>
+<script src="bower_components/lobilist/lib/jquery/jquery.min.js"></script>
 <!-- Bootstrap 3.3.6 -->
-<script src="../bower_components/lobilist/lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="bower_components/lobilist/lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="../javascripts/lib/datatables/jquery.dataTables.min.js"></script>
+<script src="../javascripts/lib/datatables/dataTables.bootstrap.min.js"></script>
+<script src="../javascripts/lib/moment.min.js"></script>
+<script src="../javascripts/lib/moment-with-locales.min.js"></script>
 <!-- AdminLTE App -->
-<script src="../javascripts/lib/app.min.js"></script>
-<script src="../javascripts/admin.js"></script>
+<script src="javascripts/lib/app.min.js"></script>
+<script src="../javascripts/admin/user.js"></script>
+<script src="../javascripts/admin/reportes.js"></script>
 
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/data.js"></script>
+<script src="https://code.highcharts.com/modules/drilldown.js"></script>
 
 </body>
 </html>
